Fix some IE11 data page layout issues

--- a/assets/sass/modules/data.scss
+++ b/assets/sass/modules/data.scss
@@ -101,6 +101,11 @@
 .map-wrapper {
     margin: auto;
     width: 90%;
+    height: 100%;
+
+    .is-ie & {
+        height: 500px;
+    }
 
     @include mq('tablet') {
         width: 50%;
@@ -108,6 +113,7 @@
 
     svg {
         width: 100%;
+        height: 100%;
     }
 }
 
